# python-optimization-nyc-taxi

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
benchmarks/: run_all_benchmarks.py
docs/: QUICKSTART.md
scripts/: download_data.sh
src/: 01_profiling.py  02_loading.py  03_vectorization.py  04_parallelization.py  05_caching.py  06_full_benchmark.py
src/utils/: __init__.py
